Add object storage foundation
